--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["es2015", "react"],
+  "presets": ["es2015"],
   "ignore": [
     "**/babel_ignore_*.js",
     "*/js/framework/*.js",
