--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,13 @@
     "babel-preset-es2015": "^6.24.1"
   },
   "devDependencies": {
+    "awesome-typescript-loader": "^5.2.1",
     "babel-preset-es2015": "^6.24.1",
     "d3": "^5.7.0",
     "gulp": "^3.9.1",
-    "hls.js": "^0.11.0"
+    "hls.js": "^0.11.0",
+    "ts-loader": "^5.2.2",
+    "typescript": "^3.1.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
