--- a/client/package.json
+++ b/client/package.json
@@ -5,14 +5,16 @@
   "main": "gulpfile.js",
   "directories": {},
   "dependencies": {
-    "babel-preset-es2015": "^6.24.1"
-  },
-  "devDependencies": {
-    "awesome-typescript-loader": "^5.2.1",
     "babel-preset-es2015": "^6.24.1",
     "d3": "^5.7.0",
+    "hls.js": "^0.11.0"
+  },
+  "devDependencies": {
+    "@types/d3": "^5.0.1",
+    "@types/hls.js": "^0.10.2",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-preset-es2015": "^6.24.1",
     "gulp": "^3.9.1",
-    "hls.js": "^0.11.0",
     "ts-loader": "^5.2.2",
     "typescript": "^3.1.3"
   },
