--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "@types/webaudioapi": "0.0.27",
     "awesome-typescript-loader": "^5.2.1",
     "babel-preset-es2015": "^6.24.1",
-    "gulp": "^3.9.1",
+    "gulp": "3.9.1",
     "ts-loader": "^5.2.2",
     "typescript": "^3.1.3"
   },
