--- a/server/package.json
+++ b/server/package.json
@@ -5,26 +5,35 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "ts-node server.ts",
     "dev": "nodemon server.js"
   },
   "author": "Solomin Vyacheslav",
   "license": "ISC",
   "dependencies": {
     "debug": "~2.6.9",
-    "express": "^4.16.4",
     "helmet": "^3.14.0",
     "http-errors": "^1.6.3",
     "morgan": "^1.9.1",
     "pug": "^2.0.3"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/express": "^4.16.0",
+    "@types/helmet": "0.0.42",
+    "@types/http-errors": "^1.6.1",
+    "@types/morgan": "^1.7.35",
+    "@types/node": "^10.12.1",
+    "body-parser": "^1.18.3",
     "eslint": "^5.7.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "nodemon": "^1.18.4"
+    "express": "^4.16.4",
+    "nodemon": "^1.18.4",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.1.4"
   }
 }
