Чутка тестов, исправлена опечатка

--- a/drowsy/package.json
+++ b/drowsy/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "test": "mocha test/**/*.test.js"
+    "test": "mocha 'test/**/*.test.js'"
   },
   "author": "Solomin Vyacheslav",
   "license": "ISC"
